--- a/WeTravel/AndroidManifest.xml
+++ b/WeTravel/AndroidManifest.xml
@@ -2,6 +2,7 @@
     package="project56.wetravel.hogeschool"
     android:versionCode="1"
     android:versionName="1.0" >
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <uses-sdk
         android:minSdkVersion="10"
