--- a/WeTravel/AndroidManifest.xml
+++ b/WeTravel/AndroidManifest.xml
@@ -2,7 +2,10 @@
     package="project56.wetravel.hogeschool"
     android:versionCode="1"
     android:versionName="1.0" >
+    
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
 
     <uses-sdk
         android:minSdkVersion="10"
@@ -11,7 +14,7 @@
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@android:style/Theme.NoTitleBar" >
         <activity
             android:name=".Splash"
             android:label="@string/title_activity_main" >
