--- a/WeTravel/AndroidManifest.xml
+++ b/WeTravel/AndroidManifest.xml
@@ -33,6 +33,9 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
+        <activity android:name="LoginActivity"></activity>
+        <activity android:name="RegisterActivity"></activity>
+        <activity android:name="InformationActivity"></activity>
     </application>
 
 </manifest>
